Fucking navigation doesn't work. Fix this later

--- a/css/dotNav.css
+++ b/css/dotNav.css
@@ -43,7 +43,7 @@
 
 /* Individual styles and effects */
 
-/* Fill up */
+/* Fill up background color transparent*/
 
 .dotstyle-fillup li a {
 	overflow: hidden;
