--- a/css/template.css
+++ b/css/template.css
@@ -25,6 +25,7 @@ html, body{
         height: 100%;
         background-color: #ffe4e1;
         overflow: none;
+        padding:20px;
 
     }
 
@@ -34,7 +35,7 @@ html, body{
 
          width:100%;
          height: 100%;
-         padding: 50px 20px 50px 20px;
+         padding: 50px;
          overflow: auto;
 
     }
