made template for the index/homepage
next time: customize the page to include latest inserts for the blog

--- a/css/template.css
+++ b/css/template.css
@@ -47,6 +47,10 @@ html, body{
 
     }
 
+    .biography-comic h1{
+        padding-bottom: 20px;
+    }
+
     .bio{
         padding-bottom: 20px;
          text-align: center;
