added Chien-Shiung Wu, homepage, made shit ton of edits

--- a/css/template.css
+++ b/css/template.css
@@ -26,7 +26,6 @@ html, body{
 
     .portait-images{
         width:100%;
-        background-color: #ffe4e1;
         overflow: none;
         padding:20px;
     }
@@ -37,6 +36,10 @@ html, body{
         -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
           transform: translateY(-50%);
+    }
+
+    .topdown{
+        display: block;
     }
 
 /* Biography-Comic Side */
@@ -217,7 +220,7 @@ h1,h2,h3,h4,h5,h6 {
     font-size: 100%;
     margin:0;
     padding:0;
-    color:#444;
+    color:#282828;
 }
 q:before,q:after {
     content:'';
@@ -230,7 +233,7 @@ abbr,acronym { border: 0;
  * --------------------------------------- */
 body{
     font-family: arial,helvetica;
-    color: #333;
+    color: #28282;
     color: rgba(0,0,0,0.5);
 }
 .wrap{
@@ -241,6 +244,7 @@ body{
 }
 h1{
     font-size: 5em;
+    color: #282828;
 }
 p{
     font-size: 1em;
